objects/Routing_Table__c.object
<CustomObject>
    <fields>
        <fullName>Depot__c</fullName>
        <inlineHelpText>This is NOT the Collection Depot. Look in the Depot Routing section for the Collection Depot.

Routing Networks:
&gt; EXP = Express
&gt; EWW = International
&gt; RET = Fashion</inlineHelpText>
        <label>Depot</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Routings</relationshipLabel>
        <relationshipName>Routings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <externalId>true</externalId>
        <label>District</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Postcode__c</fullName>
        <externalId>true</externalId>
        <label>Part Postcode</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Routing Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Table__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Routing Table Reference</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <externalId>true</externalId>
        <label>Town</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Routing Table</label>
    <nameField>
        <displayFormat>RT-{00000000}</displayFormat>
        <label>Routing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>